fixed the translation!

--- a/index.html
+++ b/index.html
@@ -87,31 +87,32 @@
                     <div class="skill-category">
                         <h4 data-i18n="uiux">UI/UX Design</h4>
                         <div class="tags">
-                            <span class="tag" data-skill="figma">Figma</span>
-                            <span class="tag" data-skill="wireframing">Wireframing</span>
-                            <span class="tag" data-skill="prototyping">Prototyping</span>
-                            <span class="tag" data-skill="user_research">User Research</span>
-                            <span class="tag" data-skill="design_systems">Design Systems</span>
+                            <span class="tag" data-skill="adobe_xd" data-i18n="skill_adobe_xd">Adobe XD</span>
+                            <span class="tag" data-skill="figma" data-i18n="skill_figma">Figma</span>
+                            <span class="tag" data-skill="wireframing" data-i18n="skill_wireframing">Wireframing</span>
+                            <span class="tag" data-skill="prototyping" data-i18n="skill_prototyping">Prototyping</span>
+                            <span class="tag" data-skill="user_research" data-i18n="skill_user_research">User Research</span>
+                            <span class="tag" data-skill="design_systems" data-i18n="skill_design_systems">Design Systems</span>
                         </div>
                     </div>
 
                     <div class="skill-category">
                         <h4 data-i18n="frontend">Frontend Dev</h4>
                         <div class="tags">
-                            <span class="tag" data-skill="html5">HTML5</span>
-                            <span class="tag" data-skill="css3_sass">CSS3 / SASS</span>
-                            <span class="tag" data-skill="javascript">JavaScript</span>
-                            <span class="tag" data-skill="responsive_design">Responsive Design</span>
+                            <span class="tag" data-skill="html5" data-i18n="skill_html5">HTML5</span>
+                            <span class="tag" data-skill="css3_sass" data-i18n="skill_css3_sass">CSS3 / SASS</span>
+                            <span class="tag" data-skill="javascript" data-i18n="skill_javascript">JavaScript</span>
+                            <span class="tag" data-skill="responsive_design" data-i18n="skill_responsive_design">Responsive Design</span>
                         </div>
                     </div>
 
                     <div class="skill-category">
                         <h4 data-i18n="tools">Tools & Methodologies</h4>
                         <div class="tags" aria-label="Tools and methodologies">
-                            <span class="tag" data-skill="jira_confluence">Jira / Confluence</span>
-                            <span class="tag" data-skill="adobe_cs">Adobe Creative Suite</span>
-                            <span class="tag" data-skill="agile_scrum">Agile / Scrum</span>
-                            <span class="tag" data-skill="git">Git</span>
+                            <span class="tag" data-skill="jira_confluence" data-i18n="skill_jira_confluence">Jira / Confluence</span>
+                            <span class="tag" data-skill="adobe_cs" data-i18n="skill_adobe_cs">Adobe Creative Suite</span>
+                            <span class="tag" data-skill="agile_scrum" data-i18n="skill_agile_scrum">Agile / Scrum</span>
+                            <span class="tag" data-skill="git" data-i18n="skill_git">Git</span>
                         </div>
                         <div class="tags" aria-label="Additional technical skills">
                             <span class="tag" data-skill="it_support" data-i18n="skill_it_support">IT Support</span>
@@ -127,8 +128,8 @@
                 <section class="languages-section">
                     <h3 data-i18n="languages_heading">Languages</h3>
                     <ul class="list-simple">
-                        <li><strong data-i18n="lang_ro_label">Română:</strong> <span data-i18n="lang_ro_level">Nativ</span></li>
-                        <li><strong data-i18n="lang_en_label">Engleză:</strong> <span data-i18n="lang_en_level">Avansat</span></li>
+                        <li><strong data-i18n="lang_ro_label">Romanian:</strong> <span data-i18n="lang_ro_level">Native</span></li>
+                        <li><strong data-i18n="lang_en_label">English:</strong> <span data-i18n="lang_en_level">Advanced</span></li>
                     </ul>
                 </section>
             </aside>
@@ -138,8 +139,8 @@
                 <section class="about-me">
                     <h3 data-i18n="about_heading">About Me</h3>
                     <p data-i18n="about_text">
-                        Hybrid UI/UX Designer with a solid background in Frontend Development (over 4 years experience). 
-                        Specialised in turning complex requirements into intuitive, technically-feasible interfaces. 
+                        Hybrid UI/UX Designer with a solid background in Frontend Development (over 4 years of experience). 
+                        Specialised in turning complex requirements into intuitive, technically feasible interfaces. 
                         My passion is closing the gap between design and code, ensuring an efficient handover process.
                     </p>
                 </section>
@@ -150,38 +151,47 @@
                     <article class="job">
                         <div class="job-header">
                             <h4 data-i18n="job1_title">UI/UX Designer & Frontend Developer</h4>
-                            <span class="company" data-i18n="job1_company">VALEO IT Services International</span>
-                            <span class="period" data-i18n="job1_period">Apr 2021 – Prezent</span>
+                            <span class="company" data-i18n="job1_company">VALEO IT Services International GmbH</span>
+                            <span class="period" data-i18n="job1_period">Apr 2021 – Present</span>
                         </div>
                         <ul class="job-details">
-                            <li data-i18n="job1_b1"><strong>Design & Implementation:</strong> Designing interfaces in Figma and implementing them using HTML/CSS/JS, ensuring technical feasibility from the start.</li>
-                            <li data-i18n="job1_b2"><strong>Prototyping:</strong> Creating interactive prototypes to validate user flows with stakeholders.</li>
-                            <li data-i18n="job1_b3"><strong>Collaboration:</strong> Acting as a bridge between design and backend teams, reducing visual implementation errors.</li>
+                            <li data-i18n="job1_b1"></li>
+                            <li data-i18n="job1_b2"></li>
+                            <li data-i18n="job1_b3"></li>
+                            <li data-i18n="job1_b4"></li>
+                            <li data-i18n="job1_b5"></li>
                         </ul>
                     </article>
 
                     <article class="job">
                         <div class="job-header">
                             <h4 data-i18n="job2_title">Support Engineer (Jira & Confluence)</h4>
-                            <span class="company" data-i18n="job2_company">VALEO IT Services International</span>
-                            <span class="period" data-i18n="job2_period">Sept 2020 – June 2023</span>
+                            <span class="company" data-i18n="job2_company">VALEO IT Services International GmbH</span>
+                            <span class="period" data-i18n="job2_period">Sept 2020 – Present</span>
                         </div>
                         <ul class="job-details">
-                            <li data-i18n="job2_b1">Optimising workflows in Jira to increase team efficiency.</li>
-                            <li data-i18n="job2_b2">Diagnosing user issues, building empathy that informs current UX decisions.</li>
+                            <li data-i18n="job2_b1"></li>
+                            <li data-i18n="job2_b2"></li>
+                            <li data-i18n="job2_b3"></li>
+                            <li data-i18n="job2_b4"></li>
+                            <li data-i18n="job2_b5"></li>
+                            <li data-i18n="job2_b6"></li>
+                            <li data-i18n="job2_b7"></li>
                         </ul>
                     </article>
 
                     <article class="job">
                         <div class="job-header">
                             <h4 data-i18n="job4_title">IT Support Specialist</h4>
-                            <span class="company" data-i18n="job4_company">VALEO IT Services International</span>
-                            <span class="period" data-i18n="job4_period">Aug 2017 – Sept 2020</span>
+                            <span class="company" data-i18n="job4_company">VALEO IT Services International GmbH</span>
+                            <span class="period" data-i18n="job4_period">Sept 2017 – Sept 2020</span>
                         </div>
                         <ul class="job-details">
-                            <li data-i18n="job4_b1">Provided technical support for internal employees, ensuring smooth operation of hardware and software systems.</li>
-                            <li data-i18n="job4_b2">Managed user accounts, diagnosed network issues, and maintained IT assets.</li>
-                            <li data-i18n="job4_b3">Served as the first point of contact for technical incidents.</li>
+                            <li data-i18n="job4_b1"></li>
+                            <li data-i18n="job4_b2"></li>
+                            <li data-i18n="job4_b3"></li>
+                            <li data-i18n="job4_b4"></li>
+                            <li data-i18n="job4_b5"></li>
                         </ul>
                         <!-- Skill tags moved to sidebar for better discoverability -->
                     </article>
